src/ru/ifmo/larionov/dart/grammar/SimpleDartWithArraysParser.java
// Generated from D:\workspace\DartTranslator\src\ru\ifmo\larionov\dart\grammar\SimpleDartWithArrays.g4 by ANTLR 4.x
package ru.ifmo.larionov.dart.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleDartWithArraysParser extends Parser {
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            VOID = 1, INT = 2, LIST = 3, RETURN = 4, LCURLY = 5, RCURLY = 6, LPAREN = 7, RPAREN = 8,
            LSQUARE = 9, RSQUARE = 10, EQUAL = 11, PLUS = 12, MINUS = 13, STAR = 14, SLASH = 15,
            COMMA = 16, LE = 17, GE = 18, EE = 19, NE = 20, LESS = 21, MORE = 22, NOT = 23, TRUE = 24,
            FALSE = 25, OR = 26, AND = 27, IF = 28, ELSE = 29, FOR = 30, WHILE = 31, BREAK = 32, CONTINUE = 33,
            SEMICOLON = 34, DOT = 35, NUM_INT = 36, IDENT = 37, LITERAL = 38, WS = 39;
    public static final String[] tokenNames = {
            "<INVALID>", "'void'", "'int'", "'List'", "'return'", "'{'", "'}'", "'('",
            "')'", "'['", "']'", "'='", "'+'", "'-'", "'*'", "'/'", "','", "'<='",
            "'>='", "'=='", "'!='", "'<'", "'>'", "'!'", "'true'", "'false'", "'||'",
            "'&&'", "'if'", "'else'", "'for'", "'while'", "'break'", "'continue'",
            "';'", "'.'", "NUM_INT", "IDENT", "LITERAL", "WS"
    };
    public static final int
            RULE_compilationUnit = 0, RULE_globalVariableDeclaration = 1, RULE_functionDeclaration = 2,
            RULE_functionParameters = 3, RULE_functionBody = 4, RULE_block = 5, RULE_blockStatement = 6,
            RULE_statement = 7, RULE_assignment = 8, RULE_forStatement = 9, RULE_forControl = 10,
            RULE_forInit = 11, RULE_forUpdate = 12, RULE_parExpression = 13, RULE_jumpStatement = 14,
            RULE_arrayInitializer = 15, RULE_expression = 16, RULE_funcCall = 17,
            RULE_logicalOr = 18, RULE_logicalAnd = 19, RULE_relationalExpr = 20, RULE_simpleExpression = 21,
            RULE_arrayIdent = 22, RULE_expressionList = 23, RULE_variableList = 24,
            RULE_typeIdentifier = 25, RULE_variableType = 26, RULE_variable = 27,
            RULE_variableDeclarationStatement = 28, RULE_variableDeclaration = 29,
            RULE_variableDeclarators = 30, RULE_variableDeclarator = 31, RULE_variableInitializer = 32,
            RULE_ariphExpression = 33, RULE_ariphTerm = 34, RULE_ariphFactor = 35;
    public static final String[] ruleNames = {
            "compilationUnit", "globalVariableDeclaration", "functionDeclaration",
            "functionParameters", "functionBody", "block", "blockStatement", "statement",
            "assignment", "forStatement", "forControl", "forInit", "forUpdate", "parExpression",
            "jumpStatement", "arrayInitializer", "expression", "funcCall", "logicalOr",
            "logicalAnd", "relationalExpr", "simpleExpression", "arrayIdent", "expressionList",
            "variableList", "typeIdentifier", "variableType", "variable", "variableDeclarationStatement",
            "variableDeclaration", "variableDeclarators", "variableDeclarator", "variableInitializer",
            "ariphExpression", "ariphTerm", "ariphFactor"
    };

    @Override
    public String getGrammarFileName() {
        return "SimpleDartWithArrays.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SimpleDartWithArraysParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class CompilationUnitContext extends ParserRuleContext {
        public List<FunctionDeclarationContext> functionDeclaration() {
            return getRuleContexts(FunctionDeclarationContext.class);
        }

        public FunctionDeclarationContext functionDeclaration(int i) {
            return getRuleContext(FunctionDeclarationContext.class, i);
        }

        public GlobalVariableDeclarationContext globalVariableDeclaration(int i) {
            return getRuleContext(GlobalVariableDeclarationContext.class, i);
        }

        public List<GlobalVariableDeclarationContext> globalVariableDeclaration() {
            return getRuleContexts(GlobalVariableDeclarationContext.class);
        }

        public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compilationUnit;
        }
    }

    public final CompilationUnitContext compilationUnit() throws RecognitionException {
        CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilationUnit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << INT) | (1L << LIST))) != 0)) {
                    {
                        setState(74);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(72);
                                functionDeclaration();
                            }
                            break;
                            case 2: {
                                setState(73);
                                globalVariableDeclaration();
                            }
                            break;
                        }
                    }
                    setState(78);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class GlobalVariableDeclarationContext extends ParserRuleContext {
        public VariableDeclarationStatementContext variableDeclarationStatement() {
            return getRuleContext(VariableDeclarationStatementContext.class, 0);
        }

        public GlobalVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_globalVariableDeclaration;
        }
    }

    public final GlobalVariableDeclarationContext globalVariableDeclaration() throws RecognitionException {
        GlobalVariableDeclarationContext _localctx = new GlobalVariableDeclarationContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_globalVariableDeclaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                variableDeclarationStatement();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionDeclarationContext extends ParserRuleContext {
        public FunctionBodyContext functionBody() {
            return getRuleContext(FunctionBodyContext.class, 0);
        }

        public TypeIdentifierContext typeIdentifier() {
            return getRuleContext(TypeIdentifierContext.class, 0);
        }

        public FunctionParametersContext functionParameters() {
            return getRuleContext(FunctionParametersContext.class, 0);
        }

        public TerminalNode IDENT() {
            return getToken(SimpleDartWithArraysParser.IDENT, 0);
        }

        public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functionDeclaration;
        }
    }

    public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
        FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_functionDeclaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                typeIdentifier();
                setState(82);
                match(IDENT);
                setState(83);
                functionParameters();
                setState(84);
                functionBody();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionParametersContext extends ParserRuleContext {
        public TerminalNode LPAREN() {
            return getToken(SimpleDartWithArraysParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(SimpleDartWithArraysParser.RPAREN, 0);
        }

        public VariableListContext variableList() {
            return getRuleContext(VariableListContext.class, 0);
        }

        public FunctionParametersContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functionParameters;
        }
    }

    public final FunctionParametersContext functionParameters() throws RecognitionException {
        FunctionParametersContext _localctx = new FunctionParametersContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_functionParameters);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                match(LPAREN);
                setState(88);
                _la = _input.LA(1);
                if (_la == INT || _la == LIST) {
                    {
                        setState(87);
                        variableList();
                    }
                }

                setState(90);
                match(RPAREN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionBodyContext extends ParserRuleContext {
        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functionBody;
        }
    }

    public final FunctionBodyContext functionBody() throws RecognitionException {
        FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_functionBody);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockContext extends ParserRuleContext {
        public TerminalNode RCURLY() {
            return getToken(SimpleDartWithArraysParser.RCURLY, 0);
        }

        public TerminalNode LCURLY() {
            return getToken(SimpleDartWithArraysParser.LCURLY, 0);
        }

        public List<BlockStatementContext> blockStatement() {
            return getRuleContexts(BlockStatementContext.class);
        }

        public BlockStatementContext blockStatement(int i) {
            return getRuleContext(BlockStatementContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                match(LCURLY);
                setState(98);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << LIST) | (1L << RETURN) | (1L << LCURLY) | (1L << LPAREN) | (1L << MINUS) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << SEMICOLON) | (1L << NUM_INT) | (1L << IDENT))) != 0)) {
                    {
                        {
                            setState(95);
                            blockStatement();
                        }
                    }
                    setState(100);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(101);
                match(RCURLY);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockStatementContext extends ParserRuleContext {
        public VariableDeclarationStatementContext variableDeclarationStatement() {
            return getRuleContext(VariableDeclarationStatementContext.class, 0);
        }

        public StatementContext statement() {
            return getRuleContext(StatementContext.class, 0);
        }

        public BlockStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_blockStatement;
        }
    }

    public final BlockStatementContext blockStatement() throws RecognitionException {
        BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_blockStatement);
        try {
            setState(105);
            switch (_input.LA(1)) {
                case INT:
                case LIST:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(103);
                    variableDeclarationStatement();
                }
                break;
                case RETURN:
                case LCURLY:
                case LPAREN:
                case MINUS:
                case IF:
                case FOR:
                case WHILE:
                case BREAK:
                case CONTINUE:
                case SEMICOLON:
                case NUM_INT:
                case IDENT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(104);
                    statement();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public TerminalNode SEMICOLON() {
            return getToken(SimpleDartWithArraysParser.SEMICOLON, 0);
        }

        public TerminalNode ELSE() {
            return getToken(SimpleDartWithArraysParser.ELSE, 0);
        }

        public TerminalNode IF() {
            return getToken(SimpleDartWithArraysParser.IF, 0);
        }

        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public JumpStatementContext jumpStatement() {
            return getRuleContext(JumpStatementContext.class, 0);
        }

        public ForStatementContext forStatement() {
            return getRuleContext(ForStatementContext.class, 0);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TerminalNode WHILE() {
            return getToken(SimpleDartWithArraysParser.WHILE, 0);
        }

        public ParExpressionContext parExpression() {
            return getRuleContext(ParExpressionContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_statement);
        int _la;
        try {
            setState(128);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(107);
                    block();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(108);
                    assignment();
                    setState(109);
                    match(SEMICOLON);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(112);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << MINUS) | (1L << NUM_INT) | (1L << IDENT))) != 0)) {
                        {
                            setState(111);
                            expression();
                        }
                    }

                    setState(114);
                    match(SEMICOLON);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(115);
                    match(IF);
                    setState(116);
                    parExpression();
                    setState(117);
                    statement();
                    setState(120);
                    switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                        case 1: {
                            setState(118);
                            match(ELSE);
                            setState(119);
                            statement();
                        }
                        break;
                    }
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(122);
                    forStatement();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(123);
                    match(WHILE);
                    setState(124);
                    parExpression();
                    setState(125);
                    statement();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(127);
                    jumpStatement();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignmentContext extends ParserRuleContext {
        public TerminalNode EQUAL() {
            return getToken(SimpleDartWithArraysParser.EQUAL, 0);
        }

        public ArrayIdentContext arrayIdent() {
            return getRuleContext(ArrayIdentContext.class, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TerminalNode IDENT() {
            return getToken(SimpleDartWithArraysParser.IDENT, 0);
        }

        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_assignment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                match(IDENT);
                setState(132);
                _la = _input.LA(1);
                if (_la == LSQUARE) {
                    {
                        setState(131);
                        arrayIdent();
                    }
                }

                setState(134);
                match(EQUAL);
                setState(135);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForStatementContext extends ParserRuleContext {
        public TerminalNode LPAREN() {
            return getToken(SimpleDartWithArraysParser.LPAREN, 0);
        }

        public ForControlContext forControl() {
            return getRuleContext(ForControlContext.class, 0);
        }

        public TerminalNode FOR() {
            return getToken(SimpleDartWithArraysParser.FOR, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(SimpleDartWithArraysParser.RPAREN, 0);
        }

        public StatementContext statement() {
            return getRuleContext(StatementContext.class, 0);
        }

        public ForStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forStatement;
        }
    }

    public final ForStatementContext forStatement() throws RecognitionException {
        ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_forStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(137);
                match(FOR);
                setState(138);
                match(LPAREN);
                setState(139);
                forControl();
                setState(140);
                match(RPAREN);
                setState(141);
                statement();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForControlContext extends ParserRuleContext {
        public List<TerminalNode> SEMICOLON() {
            return getTokens(SimpleDartWithArraysParser.SEMICOLON);
        }

        public LogicalOrContext logicalOr() {
            return getRuleContext(LogicalOrContext.class, 0);
        }

        public ForUpdateContext forUpdate() {
            return getRuleContext(ForUpdateContext.class, 0);
        }

        public ForInitContext forInit() {
            return getRuleContext(ForInitContext.class, 0);
        }

        public TerminalNode SEMICOLON(int i) {
            return getToken(SimpleDartWithArraysParser.SEMICOLON, i);
        }

        public ForControlContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forControl;
        }
    }

    public final ForControlContext forControl() throws RecognitionException {
        ForControlContext _localctx = new ForControlContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_forControl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                _la = _input.LA(1);
                if (_la == INT || _la == LIST) {
                    {
                        setState(143);
                        forInit();
                    }
                }

                setState(146);
                match(SEMICOLON);
                setState(148);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << MINUS) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << NUM_INT) | (1L << IDENT))) != 0)) {
                    {
                        setState(147);
                        logicalOr();
                    }
                }

                setState(150);
                match(SEMICOLON);
                setState(152);
                _la = _input.LA(1);
                if (_la == IDENT) {
                    {
                        setState(151);
                        forUpdate();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForInitContext extends ParserRuleContext {
        public VariableDeclarationContext variableDeclaration() {
            return getRuleContext(VariableDeclarationContext.class, 0);
        }

        public ForInitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forInit;
        }
    }

    public final ForInitContext forInit() throws RecognitionException {
        ForInitContext _localctx = new ForInitContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_forInit);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(154);
                variableDeclaration();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForUpdateContext extends ParserRuleContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public ForUpdateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forUpdate;
        }
    }

    public final ForUpdateContext forUpdate() throws RecognitionException {
        ForUpdateContext _localctx = new ForUpdateContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_forUpdate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(156);
                assignment();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParExpressionContext extends ParserRuleContext {
        public LogicalOrContext logicalOr() {
            return getRuleContext(LogicalOrContext.class, 0);
        }

        public TerminalNode LPAREN() {
            return getToken(SimpleDartWithArraysParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(SimpleDartWithArraysParser.RPAREN, 0);
        }

        public ParExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parExpression;
        }
    }

    public final ParExpressionContext parExpression() throws RecognitionException {
        ParExpressionContext _localctx = new ParExpressionContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_parExpression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(158);
                match(LPAREN);
                setState(159);
                logicalOr();
                setState(160);
                match(RPAREN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class JumpStatementContext extends ParserRuleContext {
        public Token continueSt;
        public Token breakSt;
        public Token returnSt;

        public TerminalNode SEMICOLON() {
            return getToken(SimpleDartWithArraysParser.SEMICOLON, 0);
        }

        public TerminalNode RETURN() {
            return getToken(SimpleDartWithArraysParser.RETURN, 0);
        }

        public TerminalNode BREAK() {
            return getToken(SimpleDartWithArraysParser.BREAK, 0);
        }

        public TerminalNode CONTINUE() {
            return getToken(SimpleDartWithArraysParser.CONTINUE, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public JumpStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_jumpStatement;
        }
    }

    public final JumpStatementContext jumpStatement() throws RecognitionException {
        JumpStatementContext _localctx = new JumpStatementContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_jumpStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(168);
                switch (_input.LA(1)) {
                    case CONTINUE: {
                        setState(162);
                        ((JumpStatementContext) _localctx).continueSt = match(CONTINUE);
                    }
                    break;
                    case BREAK: {
                        setState(163);
                        ((JumpStatementContext) _localctx).breakSt = match(BREAK);
                    }
                    break;
                    case RETURN: {
                        setState(164);
                        ((JumpStatementContext) _localctx).returnSt = match(RETURN);
                        setState(166);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << MINUS) | (1L << NUM_INT) | (1L << IDENT))) != 0)) {
                            {
                                setState(165);
                                expression();
                            }
                        }

                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(170);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ArrayInitializerContext extends ParserRuleContext {
        public TerminalNode RSQUARE() {
            return getToken(SimpleDartWithArraysParser.RSQUARE, 0);
        }

        public ExpressionListContext expressionList() {
            return getRuleContext(ExpressionListContext.class, 0);
        }

        public TerminalNode LSQUARE() {
            return getToken(SimpleDartWithArraysParser.LSQUARE, 0);
        }

        public ArrayInitializerContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_arrayInitializer;
        }
    }

    public final ArrayInitializerContext arrayInitializer() throws RecognitionException {
        ArrayInitializerContext _localctx = new ArrayInitializerContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_arrayInitializer);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                match(LSQUARE);
                setState(174);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << MINUS) | (1L << NUM_INT) | (1L << IDENT))) != 0)) {
                    {
                        setState(173);
                        expressionList();
                    }
                }

                setState(176);
                match(RSQUARE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public AriphExpressionContext ariphExpression() {
            return getRuleContext(AriphExpressionContext.class, 0);
        }

        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }
    }

    public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_expression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(178);
                ariphExpression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FuncCallContext extends ParserRuleContext {
        public ExpressionListContext expressionList() {
            return getRuleContext(ExpressionListContext.class, 0);
        }

        public TerminalNode LPAREN() {
            return getToken(SimpleDartWithArraysParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(SimpleDartWithArraysParser.RPAREN, 0);
        }

        public TerminalNode IDENT() {
            return getToken(SimpleDartWithArraysParser.IDENT, 0);
        }

        public FuncCallContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_funcCall;
        }
    }
